[gd_scene load_steps=18 format=2]

[ext_resource path="res://IBMPlexMono-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Title.tres" type="Theme" id=2]
[ext_resource path="res://ShipSelect.gd" type="Script" id=3]
[ext_resource path="res://ShipEntry.gd" type="Script" id=4]
[ext_resource path="res://Ships/GreenLight/Greenhorn-class Heavy Gunship/Concept.svg" type="Texture" id=5]
[ext_resource path="res://Ships/GreenLight/Greenhorn-class Heavy Gunship/Ship.tscn" type="PackedScene" id=6]
[ext_resource path="res://Ships/GreenLight/Greenhorn-II-class Gunship/Ship.tscn" type="PackedScene" id=7]
[ext_resource path="res://Ships/GreenLight/Greenhorn-II-class Gunship/Concept.svg" type="Texture" id=8]
[ext_resource path="res://ShipDesc.tres" type="Theme" id=9]
[ext_resource path="res://Ships/RedShift/Lightspeed-III-class courier/Concept.svg" type="Texture" id=10]
[ext_resource path="res://Ships/RedShift/Lightspeed-III-class courier/Ship.tscn" type="PackedScene" id=11]
[ext_resource path="res://Ships/RedShift/Lightspeed-II-class light gunship/Ship.tscn" type="PackedScene" id=12]
[ext_resource path="res://Ships/RedShift/Lightspeed-II-class light gunship/Concept.svg" type="Texture" id=13]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=4]
default_font = SubResource( 3 )

[node name="Node" type="Node"]

[node name="Panel" type="Panel" parent="."]
margin_right = 1720.0
margin_bottom = 1080.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="Panel"]
margin_right = 1720.0
margin_bottom = 320.0
theme = ExtResource( 2 )
custom_colors/font_color = Color( 0, 1, 0.447059, 1 )
text = "Ship
Select"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Start" type="Button" parent="Panel"]
margin_left = 660.0
margin_top = 750.0
margin_right = 1060.0
margin_bottom = 878.0
theme = SubResource( 2 )
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="P1" type="Label" parent="Panel"]
margin_left = 128.0
margin_top = 187.81
margin_right = 512.0
margin_bottom = 319.81
theme = SubResource( 4 )
custom_colors/font_color = Color( 0, 1, 0.447059, 1 )
text = "Player 1
A/W/D - Thrust
Q/F/E - Fire"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="P2" type="Label" parent="Panel"]
margin_left = 1200.0
margin_top = 187.81
margin_right = 1637.0
margin_bottom = 319.81
theme = SubResource( 4 )
custom_colors/font_color = Color( 0, 1, 0.447059, 1 )
text = "Player 2
Left/Up/Right -  Thrust
Alt/Ctrl/Shift - Fire"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Description" type="Label" parent="Panel"]
margin_left = 597.0
margin_top = 393.0
margin_right = 1129.0
margin_bottom = 540.0
theme = ExtResource( 9 )
custom_colors/font_color = Color( 0, 1, 0.447059, 1 )
text = "[Duel Mode]
DESTROY or DISARM
the opponent to win"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="P1Ship" type="OptionButton" parent="Panel"]
margin_left = 128.0
margin_top = 328.208
margin_right = 512.0
margin_bottom = 584.208
align = 1
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="P1ShipDesc" type="Label" parent="Panel"]
margin_left = 128.0
margin_top = 584.208
margin_right = 512.0
margin_bottom = 840.208
theme = ExtResource( 9 )
text = "Ship Description"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="P2Ship" type="OptionButton" parent="Panel"]
margin_left = 1200.0
margin_top = 328.208
margin_right = 1584.0
margin_bottom = 584.208
align = 1
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="P2ShipDesc" type="Label" parent="Panel"]
margin_left = 1200.0
margin_top = 584.208
margin_right = 1584.0
margin_bottom = 840.208
theme = ExtResource( 9 )
text = "Ship Description"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShipList" type="Node" parent="Panel"]

[node name="Lightspeed-II" type="Node" parent="Panel/ShipList"]
script = ExtResource( 4 )
description = "The Lightspeed-II is a light gunship protected by energy shields"
icon = ExtResource( 13 )
ship = ExtResource( 12 )

[node name="Lightspeed-III" type="Node" parent="Panel/ShipList"]
script = ExtResource( 4 )
description = "The Lightspeed-III is a fast gunship with a powerful laser turret"
icon = ExtResource( 10 )
ship = ExtResource( 11 )

[node name="Greenhorn" type="Node" parent="Panel/ShipList"]
script = ExtResource( 4 )
description = "This slow, heavy gunship fires high-speed beams and a pulling force wave"
icon = ExtResource( 5 )
ship = ExtResource( 6 )

[node name="Greenhorn-II" type="Node" parent="Panel/ShipList"]
script = ExtResource( 4 )
description = "This armored gunship fires wavy energy beams"
icon = ExtResource( 8 )
ship = ExtResource( 7 )

[connection signal="pressed" from="Panel/Start" to="Panel" method="startDuel"]
